- Atualização do projeto Django - Ajustes nos arquivos de configuração e templates - Renomeação do template `sobre.html` para `about.html`

--- a/primeiro_app/templates/about.html
+++ b/primeiro_app/templates/about.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Sobre Page</h1>
-    <a href="/home">Home</a>
+    <h1>About Page</h1>
+    <a href="/">Home</a>
 </body>
 </html>
