--- a/primeiro_app/templates/primeiro_app/base.html
+++ b/primeiro_app/templates/primeiro_app/base.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>
+        {% block title %}{% endblock title%}
+    </title>
 </head>
+
 <body>
-    <h1>About Page</h1>
-    <a href="/">Home</a>
+    
 </body>
+
 </html>
