--- a/primeiro_app/templates/primeiro_app/partials/header.html
+++ b/primeiro_app/templates/primeiro_app/partials/header.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <h1>Home Page</h1>
-    <a href="/about">About</a>
+    <header>
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/about">About</a></li>
+        </ul>
+    </header>
 </body>
+
 </html>
