Outras mudanças para melhor performace

--- a/primeiro_app/templates/primeiro_app/base.html
+++ b/primeiro_app/templates/primeiro_app/base.html
@@ -4,12 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>
-        {% block title %}{% endblock title%}
-    </title>
+    <title>{% block title %}{% endblock title%}</title>
 </head>
 
 <body>
+    <header>
+        <h1>Bem-vindo ao Meu Primeiro App</h1>
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/about">About</a></li>
+        </ul>
+    </nav>
+
+    <main>
+        {% block content %}{% endblock content %}
+    </main>
     
 </body>
 
