--- a/primeiro_app/templates/primeiro_app/pages/about.html
+++ b/primeiro_app/templates/primeiro_app/pages/about.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    {% include 'primeiro_app/partials/header.html' %}
+    {% include 'primeiro_app/base.html' %}
 </body>
 
 </html>
