Adicionado Navbar e Estilo

--- a/primeiro_app/templates/primeiro_app/base.html
+++ b/primeiro_app/templates/primeiro_app/base.html
@@ -1,22 +1,23 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt-br">
 
 <head>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'style.css' %}">
     <title>{% block title %}{% endblock title%}</title>
 </head>
 
 <body>
-    <header>
-        <h1>Bem-vindo ao Meu Primeiro App</h1>
-    </header>
-
-    <nav>
-        <ul>
+    <nav class="navbar">
+        <div class="logo">FindMyPet</div>
+        <ul class="nav-links">
             <li><a href="/">Home</a></li>
             <li><a href="/about">About</a></li>
         </ul>
+        <button class="login-btn">Entrar</button>
     </nav>
 
     <main>
