Atualizado página "Sobre" do primeiro app.

--- a/primeiro_app/templates/primeiro_app/pages/about.html
+++ b/primeiro_app/templates/primeiro_app/pages/about.html
@@ -9,6 +9,12 @@
 
 <body>
     {% include 'primeiro_app/base.html' %}
+    <ul>
+        <li>Sobre o primeiro app</li>
+        <li>Desenvolvido por: Dhyonatan Folador</li>
+        <li>Data de criação: 2025</li>
+        <h4>Este é um exemplo de página "Sobre" para o primeiro app.</h4>
+    </ul> 
 </body>
 
 </html>
